{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 26,
  "lineage": "a3404b4a-b9a1-cc7f-7f33-b44c1d37be1c",
  "resources": [
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:808338472994:security-group/sg-07eeaf81f648a4617",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-07eeaf81f648a4617",
            "ingress": [],
            "name": "my-cluster20201128210243109900000001",
            "name_prefix": "my-cluster",
            "owner_id": "808338472994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6f0eb80882caea8"
          }
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:808338472994:security-group/sg-0b11556801e63ca59",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0b11556801e63ca59",
            "ingress": [],
            "name": "my-cluster20201128211528463800000006",
            "name_prefix": "my-cluster",
            "owner_id": "808338472994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6f0eb80882caea8"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2276734104",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07eeaf81f648a4617",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.my-cluster.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3333798241",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07eeaf81f648a4617",
            "self": false,
            "source_security_group_id": "sg-0b11556801e63ca59",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3757954372",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b11556801e63ca59",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2042413963",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b11556801e63ca59",
            "self": false,
            "source_security_group_id": "sg-07eeaf81f648a4617",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2666904635",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b11556801e63ca59",
            "self": false,
            "source_security_group_id": "sg-07eeaf81f648a4617",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3873169780",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b11556801e63ca59",
            "self": false,
            "source_security_group_id": "sg-0b11556801e63ca59",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    }
  ]
}